--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>SkillNexia - Earn by Watching Ads</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+  <header>
+    <h1>SkillNexia</h1>
+    <p>Watch Ads • Earn Coins</p>
+  </header>
+
+  <main>
+    <div class="card">
+      <h2>Your Coins</h2>
+      <div id="coins">0</div>
+    </div>
+
+    <div class="ad-box">
+      <p>📺 Advertisement</p>
+      <div class="fake-ad">AD PLACEHOLDER</div>
+      <button onclick="watchAd()">Watch Ad</button>
+    </div>
+  </main>
+
+  <footer>
+    © 2026 SkillNexia
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
